--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,13 @@
 *,
 ::after,
 ::before {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 1rem;
   background-color: #fff6e8;
   color: #02023b;
@@ -16,26 +15,21 @@ body {
 
 main {
   min-height: 100vh;
-  display: -ms-grid;
   display: grid;
   place-items: center;
 }
-
 main .counter {
   text-align: center;
 }
-
 main .counter h1,
 main .counter #value {
   text-transform: capitalize;
   font-size: 3rem;
   font-weight: 700;
 }
-
 main .counter #value {
   font-size: 4rem;
 }
-
 main .counter .buttons-container .btn {
   text-transform: capitalize;
   font-size: 1rem;
@@ -46,11 +40,9 @@ main .counter .buttons-container .btn {
   padding: 0.5em;
   margin: 1em;
 }
-
 main .counter .buttons-container .btn:hover {
-  background-color: #201f1f;
+  background-color: rgb(32, 31, 31);
   color: #fff;
-  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
@@ -65,5 +57,4 @@ main .counter .buttons-container .btn:hover {
     font-size: 0.7rem;
     margin: 0.5em;
   }
-}
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
